NetBSD Problem Report #52630

From www@NetBSD.org  Fri Oct 20 00:57:10 2017
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 50EF47A262
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 20 Oct 2017 00:57:10 +0000 (UTC)
Message-Id: <20171020005709.868DD7A27C@mollari.NetBSD.org>
Date: Fri, 20 Oct 2017 00:57:09 +0000 (UTC)
From: matthias@petermann-it.de
Reply-To: matthias@petermann-it.de
To: gnats-bugs@NetBSD.org
Subject: Missing kernel module dependencies in cgd module (pull-up request)
X-Send-Pr-Version: www-1.0

>Number:         52630
>Category:       kern
>Synopsis:       Missing kernel module dependencies in cgd module (pull-up request)
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    pgoyette
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Oct 20 01:00:00 +0000 2017
>Closed-Date:    Mon Oct 23 21:32:05 +0000 2017
>Last-Modified:  Mon Oct 23 21:32:05 +0000 2017
>Originator:     Matthias Petermann
>Release:        7.1/evbarm
>Organization:
>Environment:
NetBSD armv7 7.1 NetBSD 7.1 (RPI2.201703111743Z) evbarm
>Description:
When enabling LVM in the given environment, the cgd module is supposed to be automatically loaded. This fails because of missing dependencies. There was a fix for this in current and netbsd-8. Anyway, it would be nice if this can be pulled up to the netbsd-7 and netbsd-7-1 branches too.

>How-To-Repeat:
- on NetBSD armv7 7.1 NetBSD 7.1 (RPI2.201703111743Z) evbarm, enable lvm in rc.conf
- reboot
>Fix:
http://cvsweb.netbsd.org/bsdweb.cgi/src/sys/dev/cgd.c.diff?r1=1.112&r2=1.113&only_with_tag=MAIN&f=h

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->pgoyette
Responsible-Changed-By: pgoyette@NetBSD.org
Responsible-Changed-When: Fri, 20 Oct 2017 08:00:04 +0000
Responsible-Changed-Why:
Take.  I will research to find the fix that was applied in 8.0 and will
request pull-ups to -7 branches.


State-Changed-From-To: open->pending-pullups
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Fri, 20 Oct 2017 08:28:33 +0000
State-Changed-Why:
Pullup 7=1518 requested


From: Paul Goyette <paul@whooppee.com>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/52630: Missing kernel module dependencies in cgd module
 (pull-up request)
Date: Fri, 20 Oct 2017 16:39:32 +0800 (+08)

 Thanks for the problem report.

 I have identified the commit that fixed this problem in -current, and have 
 requested a pull-up for the netbsd-7, netbsd-7-0, and netbsd-7-1 branches. 
 Once the pull-ups are done, the fix should be included in any new netbsd-7 
 release, ie netbsd-7.2, netbsd-7.0.2, and/or netbsd-7.1.1.

 If you need to get the fix for netbsd-7 sooner, I'm afraid you'll need to 
 rebuild your own netbsd-7 kernel and modules.


 The relevant change is:

 --- src/sys/dev/cgd.c	2016/12/11 00:20:49	1.112
 +++ src/sys/dev/cgd.c	2016/12/22 20:57:33	1.113
 @@ -1,4 +1,4 @@
 -/* $NetBSD: cgd.c,v 1.112 2016/12/11 00:20:49 alnsn Exp $ */
 +/* $NetBSD: cgd.c,v 1.113 2016/12/22 20:57:33 kamil Exp $ */

   /*-
    * Copyright (c) 2002 The NetBSD Foundation, Inc.
 @@ -30,7 +30,7 @@
    */

   #include <sys/cdefs.h>
 -__KERNEL_RCSID(0, "$NetBSD: cgd.c,v 1.112 2016/12/11 00:20:49 alnsn Exp $");
 +__KERNEL_RCSID(0, "$NetBSD: cgd.c,v 1.113 2016/12/22 20:57:33 kamil Exp $");

   #include <sys/types.h>
   #include <sys/param.h>
 @@ -1165,7 +1165,7 @@ selftest(void)
   	printf("done\n");
   }

 -MODULE(MODULE_CLASS_DRIVER, cgd, "dk_subr");
 +MODULE(MODULE_CLASS_DRIVER, cgd, "blowfish,des,dk_subr");

   #ifdef _MODULE
   CFDRIVER_DECL(cgd, DV_DISK, NULL);



 +------------------+--------------------------+----------------------------+
 | Paul Goyette     | PGP Key fingerprint:     | E-mail addresses:          |
 | (Retired)        | FA29 0E3B 35AF E8AE 6651 | paul at whooppee dot com   |
 | Kernel Developer | 0786 F758 55DE 53BA 7731 | pgoyette at netbsd dot org |
 +------------------+--------------------------+----------------------------+

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52630 CVS commit: [netbsd-7-0] src/sys/dev
Date: Mon, 23 Oct 2017 19:27:41 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Mon Oct 23 19:27:41 UTC 2017

 Modified Files:
 	src/sys/dev [netbsd-7-0]: cgd.c

 Log Message:
 Pull up following revision(s) (requested by kamil in ticket #1518):
 	sys/dev/cgd.c: revision 1.113
 PR kern/52630: The cgd(4) module requires des and blowfish symbols
 This has been exposed with the MODULAR kernel.
 kobj_checksyms, 979: [cgd]: linker error: symbol `BF_set_key' not found
 kobj_checksyms, 979: [cgd]: linker error: symbol `des_key_sched' not found
 kobj_checksyms, 979: [cgd]: linker error: symbol `des_ede3_cbc_encrypt' not found
 WARNING: module error: unable to affix module `cgd', error 8
 Reviewed by <riastradh>


 To generate a diff of this commit:
 cvs rdiff -u -r1.90.4.2 -r1.90.4.3 src/sys/dev/cgd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52630 CVS commit: [netbsd-7-1] src/sys/dev
Date: Mon, 23 Oct 2017 19:27:43 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Mon Oct 23 19:27:43 UTC 2017

 Modified Files:
 	src/sys/dev [netbsd-7-1]: cgd.c

 Log Message:
 Pull up following revision(s) (requested by kamil in ticket #1518):
 	sys/dev/cgd.c: revision 1.113
 PR kern/52630: The cgd(4) module requires des and blowfish symbols
 This has been exposed with the MODULAR kernel.
 kobj_checksyms, 979: [cgd]: linker error: symbol `BF_set_key' not found
 kobj_checksyms, 979: [cgd]: linker error: symbol `des_key_sched' not found
 kobj_checksyms, 979: [cgd]: linker error: symbol `des_ede3_cbc_encrypt' not found
 WARNING: module error: unable to affix module `cgd', error 8
 Reviewed by <riastradh>


 To generate a diff of this commit:
 cvs rdiff -u -r1.90.2.1.4.1 -r1.90.2.1.4.2 src/sys/dev/cgd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52630 CVS commit: [netbsd-7] src/sys/dev
Date: Mon, 23 Oct 2017 19:27:45 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Mon Oct 23 19:27:45 UTC 2017

 Modified Files:
 	src/sys/dev [netbsd-7]: cgd.c

 Log Message:
 Pull up following revision(s) (requested by kamil in ticket #1518):
 	sys/dev/cgd.c: revision 1.113
 PR kern/52630: The cgd(4) module requires des and blowfish symbols
 This has been exposed with the MODULAR kernel.
 kobj_checksyms, 979: [cgd]: linker error: symbol `BF_set_key' not found
 kobj_checksyms, 979: [cgd]: linker error: symbol `des_key_sched' not found
 kobj_checksyms, 979: [cgd]: linker error: symbol `des_ede3_cbc_encrypt' not found
 WARNING: module error: unable to affix module `cgd', error 8
 Reviewed by <riastradh>


 To generate a diff of this commit:
 cvs rdiff -u -r1.90.2.2 -r1.90.2.3 src/sys/dev/cgd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Mon, 23 Oct 2017 21:32:05 +0000
State-Changed-Why:
Pullup #7-1511 completed - fixed in Netbsd-7, -7-0, and -7-1


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.